--- a/style.css
+++ b/style.css
@@ -4,3 +4,12 @@ body{
 #netice{
     margin: 3% 10% 0% 10% ;
 }
+#result2{
+    margin: 3% 10% 0% 10% ;
+}
+#manat{
+    margin: 3% 0% 0% 0%;
+}
+.tt{
+    margin: 0% 0% 3% 0%;
+}
